// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot match 1`] = `
<Section
  link={null}
  theme={
    Object {
      "container": "src-shared-components-tc-communities-Section-___style__container___2DtNo",
      "content": "src-shared-components-tc-communities-Section-___style__content___17ZRh",
      "link": "src-shared-components-tc-communities-Section-___style__link___3nYY-",
      "linkWrap": "src-shared-components-tc-communities-Section-___style__linkWrap___1PnTb",
      "title": "src-shared-components-tc-communities-Section-___style__title___2uPtl",
    }
  }
  title={null}
>
  <div>
    content
  </div>
</Section>
`;

exports[`Snapshot match 2`] = `
<Section
  link={
    Object {
      "title": "link",
      "url": "#",
    }
  }
  theme={
    Object {
      "container": "src-shared-components-tc-communities-Section-___style__container___2DtNo container",
      "content": "src-shared-components-tc-communities-Section-___style__content___17ZRh content",
      "link": "src-shared-components-tc-communities-Section-___style__link___3nYY- link",
      "linkWrap": "src-shared-components-tc-communities-Section-___style__linkWrap___1PnTb linkWrap",
      "title": "src-shared-components-tc-communities-Section-___style__title___2uPtl title",
    }
  }
  title="Section title"
>
  <div>
    content
  </div>
</Section>
`;
